SF Bootcamp/force-app/main/default/objects/Flight__c/fields/Arrival_Time__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Time__c</fullName>
    <formula>Departure_Time__c + (4/24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Arrival Time</label>
    <type>Time</type>
</CustomField>