SF Bootcamp/force-app/main/default/objects/Flight__c/fields/Booked_Seats__c.field-meta.xml
<CustomField>
    <fullName>Booked_Seats__c</fullName>
    <label>Booked Seats</label>
    <summaryForeignKey>Booking__c.Flight__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>