SF Bootcamp/force-app/main/default/objects/Flight__c/fields/Depart_Arrive__c.field-meta.xml
<CustomField>
    <fullName>Depart_Arrive__c</fullName>
    <formula>Text( Flight_From__c ) + &#39; - &#39; + Text( Flight_To__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Depart/Arrive</label>
    <type>Text</type>
</CustomField>