SF Bootcamp/force-app/main/default/objects/Flight__c/fields/Destinations__c.field-meta.xml
<CustomField>
    <fullName>Destinations__c</fullName>
    <label>Destinations</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Destinations</valueSetName>
    </valueSet>
</CustomField>