SF Bootcamp/force-app/main/default/objects/Flight__c/fields/Flight_From__c.field-meta.xml
<CustomField>
    <fullName>Flight_From__c</fullName>
    <label>Flight From</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Destinations</valueSetName>
    </valueSet>
</CustomField>