SF Bootcamp/force-app/main/default/objects/Flight__c/fields/Flight_Number__c.field-meta.xml
<CustomField>
    <fullName>Flight_Number__c</fullName>
    <displayFormat>DA - {0000}</displayFormat>
    <label>Flight Number</label>
    <type>AutoNumber</type>
</CustomField>