SF Bootcamp/force-app/main/default/objects/Flight__c/fields/Flight_Price__c.field-meta.xml
<CustomField>
    <fullName>Flight_Price__c</fullName>
    <label>Flight Price</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>