SF Bootcamp/force-app/main/default/objects/Flight__c/fields/Flight_To__c.field-meta.xml
<CustomField>
    <fullName>Flight_To__c</fullName>
    <label>Flight To</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Flight_From__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Destinations</valueSetName>
    </valueSet>
</CustomField>