SF Bootcamp/force-app/main/default/objects/Flight__c/fields/Number_of_Seats__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Seats__c</fullName>
    <defaultValue>50</defaultValue>
    <label>Number of Seats</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>