SF Bootcamp/force-app/main/default/objects/Flight__c/fields/Seats_Available__c.field-meta.xml
<CustomField>
    <fullName>Seats_Available__c</fullName>
    <formula>Number_of_Seats__c -  Booked_Seats__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Seats Available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>