SF Bootcamp/force-app/main/default/objects/Flight__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Flight_Number__c</columns>
    <columns>NAME</columns>
    <columns>Flight_From__c</columns>
    <columns>Flight_To__c</columns>
    <columns>Departure_Date__c</columns>
    <columns>Departure_Time__c</columns>
    <columns>Arrival_Time__c</columns>
    <columns>Flight_Price__c</columns>
    <columns>Booked_Seats__c</columns>
    <columns>Number_of_Seats__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>